# CohesiveX-Studio

./: CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: quick_start.md  softwarex_notes.md  theory.md
examples/: README.md
examples/two_domain/: two_domain.inp
examples/two_grain/: two_grain.inp
src/cohesivex_studio/: __init__.py  __main__.py  app.py  kernel.py
tests/: test_examples.py  test_kernel.py
