[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cohesivex-studio"
version = "1.0.0"
description = "A GUI/CLI Python preprocessing platform for generating inter- and intra-domain cohesive interface elements in existing Abaqus INP models."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "guomin" }
]
keywords = [
  "Abaqus",
  "cohesive zone model",
  "finite element preprocessing",
  "user element",
  "grain boundary",
  "interfacial fracture",
  "Python GUI"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications",
  "Environment :: MacOS X",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
  "numpy>=1.21",
  "matplotlib>=3.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "build>=1.0"
]

[project.urls]
Homepage = "https://github.com/MINGUO96/CohesiveX-Studio"
Repository = "https://github.com/MINGUO96/CohesiveX-Studio"
Issues = "https://github.com/MINGUO96/CohesiveX-Studio/issues"
Documentation = "https://github.com/MINGUO96/CohesiveX-Studio/blob/main/README.md"

[project.scripts]
cohesivex-studio = "cohesivex_studio.app:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
